--- a/package.json
+++ b/package.json
@@ -10,8 +10,41 @@
     "test": "jest"
   },
   "dependencies": {
+    "@freakycoder/react-native-bounceable": "^1.0.3",
+    "@react-native-community/datetimepicker": "^8.4.2",
+    "@react-native-picker/picker": "^2.11.1",
+    "@react-native-vector-icons/ant-design": "^12.1.0",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
+    "@reduxjs/toolkit": "^2.8.2",
+    "expo": "^53.0.20",
+    "expo-av": "^15.1.7",
+    "force": "^0.0.3",
+    "formik": "^2.4.6",
+    "i18n-js": "^4.5.1",
+    "i18next": "^25.3.2",
     "react": "18.3.1",
-    "react-native": "0.77.2"
+    "react-dom": "18.3.1",
+    "react-i18next": "^15.6.0",
+    "react-native": "0.77.2",
+    "react-native-animatable": "^1.4.0",
+    "react-native-btr": "^2.2.1",
+    "react-native-date-picker": "^5.0.13",
+    "react-native-gesture-handler": "^2.27.1",
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-localize": "^3.5.1",
+    "react-native-paper": "^5.14.5",
+    "react-native-phone-number-input": "^2.1.0",
+    "react-native-poll": "^1.0.0",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.13.1",
+    "react-native-swiper-flatlist": "^3.2.5",
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
